# rustblox

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/client/: builder.rs  mod.rs  rustblox_client.rs
src/error/: mod.rs
src/routes/: mod.rs
src/routes/authenticated/group/: TODO.md  membership.rs
src/routes/authenticated/user/: mod.rs
src/routes/unauthenticated/: mod.rs
src/routes/unauthenticated/group/: groups.rs  membership.rs  mod.rs
src/routes/unauthenticated/user/: TODO.md  mod.rs  user_info.rs
src/structs/: mod.rs
src/structs/group/: mod.rs
src/structs/requests/: mod.rs
src/structs/user/: mod.rs
src/tests/: auto_reauth.rs  client_init_tests.rs  group_auth_tests.rs  group_unauth_tests.rs  mod.rs  user_auth_tests.rs  user_unauth_tests.rs
tests/: client_init_tests.rs  user_unauth_tests.rs
