[package]
name = "rustblox"
description = "A Rust library for interacting with the Roblox API"
version = "0.3.1"
edition = "2021"

[package.metadata]
msrv = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
