[package]
name = "rustblox"
description = "A Rust library for interacting with the Roblox API"
version = "0.5.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LawsOfScience/rustblox"

[package.metadata]
msrv = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3

[dependencies]
async-recursion = "1.1.1"
log = "0.4.17"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["macros"] }
